<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main19"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroudColor"
    tools:context=".MainActivity19">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/algo_fue_mal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp">


                <ImageView
                    android:id="@+id/img02"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/algo_fue_mal"
                    android:src="@drawable/im00" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="16dp"
                        android:orientation="horizontal"
                        android:weightSum="2">


                        <TextView
                            android:layout_marginTop="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="Teléfono"
                            android:textStyle="bold"
                            android:layout_gravity="left"
                            android:textSize="18dp"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_marginTop="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/contacto01"
                            android:layout_gravity="end"
                            android:textAlignment="textEnd"
                            android:textSize="18dp"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />



                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="16dp"
                        android:orientation="horizontal"
                        android:weightSum="2">


                        <TextView
                            android:layout_marginTop="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="Desarollado por"
                            android:textStyle="bold"
                            android:layout_gravity="left"
                            android:textSize="18dp"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_marginTop="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/contacto02"
                            android:layout_gravity="end"
                            android:textAlignment="textEnd"
                            android:textSize="18dp"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />



                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="16dp"
                        android:orientation="horizontal"
                        android:weightSum="2">


                        <TextView
                            android:layout_marginTop="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="Área"
                            android:textStyle="bold"
                            android:layout_gravity="left"
                            android:textSize="18dp"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_marginTop="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/contacto03"
                            android:layout_gravity="end"
                            android:textAlignment="textEnd"
                            android:textSize="18dp"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />



                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="16dp"
                        android:orientation="horizontal"
                        android:weightSum="2">


                        <TextView
                            android:layout_marginTop="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="Correo"
                            android:textStyle="bold"
                            android:layout_gravity="left"
                            android:textSize="18dp"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_marginTop="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/contacto04"
                            android:layout_gravity="end"
                            android:textAlignment="textEnd"
                            android:textSize="18dp"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />



                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="16dp"
                        android:orientation="horizontal"
                        android:weightSum="2">


                        <TextView
                            android:layout_marginTop="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="Fecha"
                            android:textStyle="bold"
                            android:layout_gravity="left"
                            android:textSize="18dp"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_marginTop="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/contacto05"
                            android:layout_gravity="end"
                            android:textAlignment="textEnd"
                            android:textSize="18dp"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />



                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="16dp"
                        android:orientation="horizontal"
                        android:weightSum="2">


                        <TextView
                            android:layout_marginTop="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="Version"
                            android:textStyle="bold"
                            android:layout_gravity="left"
                            android:textSize="18dp"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_marginTop="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/contacto06"
                            android:layout_gravity="end"
                            android:textAlignment="textEnd"
                            android:textSize="18dp"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />


                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>



    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>